# codelore-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  VERIFICATION.md  mcp_server.py  plan.md  pyproject.toml  requirements.txt
.claude/: mcp.json  settings.json
.claude/hooks/: codelore_prompt_hook.py
.github/workflows/: ci.yml
codelore/: embedding.py  explain.py  generate_questions.py  ingest.py  llm.py  main.py  nodes.py  sync.py
codelore/mcp/: __init__.py  ingest_tools.py  query_tools.py  scope.py
codelore/parsers/: __init__.py  _treesitter.py  c.py  cpp.py  csharp.py  dart.py  elixir.py  go.py  haskell.py  javascript.py  jvm.py  lua.py  php.py  python.py  r.py  ruby.py  rust.py  shell.py
codelore/query/: retrieval.py
tests/: test_llm.py  test_mcp_server_helpers.py  test_retrieval_embedding.py  test_search_code_confidence.py  test_sync.py
tests/parsers/: test_python.py  test_registry.py
vllm_usage/: notes.txt  ollama_quickstart.py  test_vllm_batching.py  vllm_batching.py  vllm_learning.py  vllm_quickstart.py
